# splendid-invoice

./: .dprint.jsonc  .gitmodules  README.md  default.nix  pyproject.toml  setup.cfg  shell.nix  splendid_invoice.py
.github/workflows/: lint.yml  nix.yaml  unittest.yml
contrib/ZUGFeRD/2.3.3/: xsd2py.sh
contrib/ZUGFeRD/2.3.3/ZF233_DE_01/: .gitignore  COPYING.md
splendid_invoice/: __init__.py  __main__.py  base.py  mail.py  splendid.py  zugferd_1p0.py
splendid_invoice/zugferd/: generated  unit_codes.py  v1_0.py  v2_3.py
tests/: test_black.py  test_flake8.py  test_git_full_mailbox.py  test_git_mail.py  test_mail_git.py  test_splendid.py  test_types.py
