[metadata]
name = splendid_invoice
description = Parse PDF invoices from Splendid Drinks
author = schnusch
license = GPL-2.0-or-later
license_file = COPYING.md

[options]
packages = find:
install_requires =
    python-poppler-qt5
    xsdata
python_requires = >=3.9
test_suite = tests
tests_require =
    black
    flake8
    mypy

[options.packages.find]
where = .
include = splendid_invoice*

[options.entry_points]
console_scripts =
    splendid-invoice = splendid_invoice:main
    splendid-mail = splendid_invoice.mail:main

[flake8]
max-line-length = 88
# E203 conflicts with black
ignore = E501,W503
exclude = .git,__pycache__,build,dist

[mypy]
warn_redundant_casts = true
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_optional = true
